ocaml/testsuite/tests/templates/basic/bad_instance_arg_value_not_found.reference
File "bad_instance_arg_value_not_found.ml", line 4, characters 2-30:
4 |   Monoid_utils(Monoid)(Banana) [@jane.non_erasable.instances]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unbound module Monoid_utils[Monoid:Banana]
